# espp-return-calculator

./: .gitignore  README.md  pyproject.toml
scripts/: run_backtest_example.py
src/espp/: __init__.py
src/espp/adapters/: in_memory_provider.py  yahoo_provider.py
src/espp/core/: __init__.py  business_calendar.py  returns.py
src/espp/domain/: __init__.py  models.py
src/espp/interfaces/: __init__.py  cli.py  streamlit_app.py
src/espp/ports/: __init__.py  market_data.py
src/espp/services/: __init__.py  backtest_service.py  scenario_service.py
tests/: test_backtest_service.py  test_calendar.py  test_yahoo_provider.py
