[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "espp-return-calculator"
version = "0.1.0"
description = "Model realized ESPP returns including settlement lag and annualized performance"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ESPP Return Calculator Contributors" }]
dependencies = [
  "requests>=2.31",
  "yfinance>=0.2.40",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
espp-calc = "espp.interfaces.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
packages = [
  { include = "espp", from = "src" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]



